# ct-pr1

./: ex1  ex1b  ex2  zp12_3  zp12_3_sorted.txt
6_zp4/: ex1.c  ex1b.c  ex2  ex2.c  ex2b  ex2b.c  strhead.h
7_zp1.2/: zp12  zp12.c  zp12_3  zp12_3.c  zp12_3.txt
CLProj/: CMakeLists.txt  char_get.c  main  main.c
CLProj/ex5/: ex5_1.c  ex5_2.c
CLProj/ex5/1_files/: b.b  c.c  d.d  e.e  f.f  g.g  h.h  i.i  j.j  k.k  l.l  m.m  n.n  p.p  q.q  r.r  s.s  t.t  u.u  v.v  w.w  x.x  y.y  z.z
CLProj/l1/: p1  p1.c  p2  p2.c  p3  p3.c
CLProj/l2/: 1.4.3.c  p3
CLProj/l3/: cast  conv  conversion.c  fact  fact.c  ts  typesizes.c
CLProj/l4/: v_3_ex_1.c  v_3_ex_2.c  v_3_ex_2_array.c
CLProj/l5/: ex_3_eps_v2.c  ex_3_epsilon.c  v_1_ex_3.c
CLProj/zp5_ex4/: e2  ex2_v3_malloc.c  pt_test.c  zp5_1.c  zp5_2.c
